--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.min.css?_v=20220225223406">
+   <link rel="stylesheet" href="css/style.min.css?_v=20220225230131">
    <title>Artificial Intelligence</title>
 </head>
 
@@ -66,31 +66,31 @@
             <div class="slide__container container">
                <div class="slide__slider slider">
                   <div class="slide__item">
-                     <picture><source srcset="img/slide1.webp" type="image/webp"><img src="img/slide1.png" alt="slide1"></picture>
+                     <div class="slide__image"><picture><source srcset="img/slide1.webp" type="image/webp"><img src="img/slide1.png" alt="slide1"></picture></div>
                      <h4 class="slide__title">Naxly as the Winners in Global Agency Awards</h4>
                      <p class="slide__text">Lorem ipsum is placeholder text commonly used in print, and publishing
                         industries for previewing layouts and visual mockups.</p>
                   </div>
                   <div class="slide__item">
-                     <picture><source srcset="img/slide2.webp" type="image/webp"><img src="img/slide2.png" alt="slide2"></picture>
+                     <div class="slide__image"><picture><source srcset="img/slide2.webp" type="image/webp"><img src="img/slide2.png" alt="slide2"></picture></div>
                      <h4 class="slide__title">Expert Prespective Agency Awards</h4>
                      <p class="slide__text">Lorem ipsum is placeholder text commonly used in print, and publishing
                         industries for previewing layouts and visual mockups.</p>
                   </div>
                   <div class="slide__item">
-                     <picture><source srcset="img/slide3.webp" type="image/webp"><img src="img/slide3.png" alt="slide3"></picture>
+                     <div class="slide__image"><picture><source srcset="img/slide3.webp" type="image/webp"><img src="img/slide3.png" alt="slide3"></picture></div>
                      <h4 class="slide__title">Business Prespective Global Agency Awards</h4>
                      <p class="slide__text">Lorem ipsum is placeholder text commonly used in print, and publishing
                         industries for previewing layouts and visual mockups.</p>
                   </div>
                   <div class="slide__item">
-                     <picture><source srcset="img/slide4.webp" type="image/webp"><img src="img/slide4.png" alt="slide4"></picture>
+                     <div class="slide__image"><picture><source srcset="img/slide4.webp" type="image/webp"><img src="img/slide4.png" alt="slide4"></picture></div>
                      <h4 class="slide__title">Value for Results in Global Agency Awards</h4>
                      <p class="slide__text">Lorem ipsum is placeholder text commonly used in print, and publishing
                         industries for previewing layouts and visual mockups.</p>
                   </div>
                   <div class="slide__item">
-                     <picture><source srcset="img/slide5.webp" type="image/webp"><img src="img/slide5.png" alt="slide5"></picture>
+                     <div class="slide__image"><picture><source srcset="img/slide5.webp" type="image/webp"><img src="img/slide5.png" alt="slide5"></picture></div>
                      <h4 class="slide__title">Global Experience in Agency Awards</h4>
                      <p class="slide__text">Lorem ipsum is placeholder text commonly used in print, and publishing
                         industries for previewing layouts and visual mockups.</p>
@@ -177,8 +177,8 @@
    </div>
 </footer>
    </div>
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js?_v=20220225223406"></script>
-   <script src="js/app.min.js?_v=20220225223406"></script>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js?_v=20220225230131"></script>
+   <script src="js/app.min.js?_v=20220225230131"></script>
 </body>
 
 </html>
